--- a/Lektion20/Web.config
+++ b/Lektion20/Web.config
@@ -129,7 +129,7 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="Data Source=.\SQLEXPRESS2;Initial Catalog=FacebookPrototype;MultipleActiveResultSets=true;Integrated Security=True" />
+        <parameter value="Data Source=.\SQLEXPRESS;Initial Catalog=FacebookPrototype;MultipleActiveResultSets=true;Integrated Security=True" />
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
